@@ -541,7 +541,6 @@ control_shutdown (void               *data,
 	nih_info (_("Control request to shutdown system for %s"), name);
 
 	event_emit (SHUTDOWN_EVENT, NULL, NULL);
-	job_set_idle_event (name);
 
 	return 0;
 }
